--- a/Certificate.html
+++ b/Certificate.html
@@ -69,25 +69,25 @@
     <div class="topnav">
         <a href="Home.html">Home</a>
         <a href="Project.html">Project</a>
-        <a class="active" href="Education.html">Education</a>
-        <a href="Certificate.html">Certificate</a>
+        <a href="Education.html">Education</a>
+        <a class="active" href="Certificate.html">Certificate</a>
     </div>
 
-    <h2>My Courses</h2>
+    <h2>My Certificate</h2>
 
     <ul id="myUL">
-        <li><a href="#">Chemistry </a></li>
-        <li><a href="#">English</a></li>
 
-        <li><a href="#">Physics</a></li>
-        <li><a href="#">Islamiat</a></li>
+        <li><a href="#">Datacamp Cleaning Data (2022) </a></li>
+        <li><a href="#">Datacamp Supervised-Learning-with-scikit-learn, (2022)</a></li>
 
-        <li><a href="#">Calculus</a></li>
-        <li><a href="#">Programming Fundamental</a></li>
-        <li><a href="#">OOP</a></li>
-        <li><a href="#">DevOps</a></li>
-        <li><a href="#">IPT</a></li>
-        <li><a href="#">SMD</a></li>
+        <li><a href="#">CertiProf - Scrum Foundation
+                Professional Certificate SFPC v2020 -
+                (English), (2023)</a></li>
+        <li><a href="#">Learning Web development using VueJs,
+                (2020)</a></li>
+
+        <li><a href="#">Ai for Everyone, (2019)</a></li>
+
     </ul>
 
 
