--- a/Home.html
+++ b/Home.html
@@ -42,6 +42,7 @@
         <a class="active" href="Home.html">Home</a>
         <a href="Project.html">Project</a>
         <a href="Education.html">Education</a>
+        <a href="Certificate.html">Certificate</a>
     </div>
 
     <h2>My Introduction</h2>
