--- a/Project.html
+++ b/Project.html
@@ -77,6 +77,7 @@
         <a href="Home.html">Home</a>
         <a class="active" href="Project.html">Project</a>
         <a href="Education.html">Education</a>
+        <a href="Certificate.html">Certificate</a>
     </div>
 
     <h2>My Project</h2>
